# SU1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
benchmarks/: extreme_benchmark_suite.cpp
examples/: CMakeLists.txt  demo_display_server.cpp
include/EGL/: egl.h
include/su1/: advanced_app_switcher.hpp  advanced_input_processor.hpp  advanced_settings_manager.hpp  advanced_styling_system.hpp  advanced_window_styling.hpp  ai_compositor.hpp  component.hpp  configuration_registry.hpp  consciousness_driven_ui.hpp  consciousness_simulation_system.hpp  core.hpp  declarations.hpp  display_manager.hpp  display_server.hpp  enhanced_taskbar.hpp  enhanced_window_decorator.hpp  extreme_graphics_engine.hpp  fluid_animation_controller.hpp  fluid_animation_engine.hpp  fractal_animation_engine.hpp  gpu_accelerated_ui.hpp  high_performance_quantum_renderer.hpp  holographic_particle_system.hpp  logging.hpp  manager_base.hpp  neural_gesture_recognition.hpp  neural_theme_engine.hpp  neural_workspace_manager.hpp  performance_mode_manager.hpp  performance_profiler.hpp  quantum_compositor.hpp  quantum_ui_renderer.hpp  quantum_window_manager.hpp  renderer.hpp  theme_manager.hpp  theming.hpp  ui_components.hpp  ui_manager.hpp  window.hpp  window_info.hpp  (+1 more)
shaders/: holographic_effect.comp  liquid_glass.frag  liquid_glass.vert  rtx_raytracing.rgen
src/: CMakeLists.txt  advanced_app_switcher.cpp  advanced_input_processor.cpp  advanced_settings_manager.cpp  advanced_styling_system.cpp  advanced_window_styling.cpp  ai_compositor.cpp  configuration_registry.cpp  consciousness_driven_ui.cpp  consciousness_simulation_system.cpp  display_manager.cpp  enhanced_taskbar.cpp  enhanced_window_decorator.cpp  extreme_graphics_engine.cpp  fluid_animation_controller.cpp  fluid_animation_engine.cpp  fractal_animation_engine.cpp  gpu_accelerated_ui.cpp  high_performance_quantum_renderer.cpp  holographic_particle_system.cpp  main.cpp  managers.cpp  neural_gesture_recognition.cpp  neural_theme_engine.cpp  neural_workspace_manager.cpp  performance_mode_manager.cpp  performance_profiler.cpp  quantum_compositor.cpp  quantum_ui_renderer.cpp  quantum_window_manager.cpp  theming.cpp  theming_clean.cpp  theming_old.cpp  ui_components.cpp  window_manager.cpp  window_manager_clean.cpp  window_manager_old.cpp
