cmake_minimum_required(VERSION 3.16)
project(SU1 VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -mtune=native -flto -fomit-frame-pointer")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math -funroll-loops -fno-exceptions -fno-rtti")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Wno-unused-parameter")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")

find_package(PkgConfig REQUIRED)
find_package(Threads REQUIRED)
find_package(Vulkan REQUIRED)

pkg_check_modules(DRM REQUIRED libdrm)
pkg_check_modules(GBM REQUIRED gbm)
pkg_check_modules(EGL REQUIRED egl)
pkg_check_modules(GLES2 REQUIRED glesv2)
pkg_check_modules(INPUT REQUIRED libinput)
pkg_check_modules(UDEV REQUIRED libudev)
pkg_check_modules(CAIRO REQUIRED cairo)
pkg_check_modules(PANGO REQUIRED pango pangoft2)
pkg_check_modules(FREETYPE REQUIRED freetype2)
pkg_check_modules(HARFBUZZ REQUIRED harfbuzz)
pkg_check_modules(PIXMAN REQUIRED pixman-1)
pkg_check_modules(LIBRSVG REQUIRED librsvg-2.0)
pkg_check_modules(JSON REQUIRED json-glib-1.0)
pkg_check_modules(GLIB REQUIRED glib-2.0)
pkg_check_modules(GIO REQUIRED gio-2.0)
pkg_check_modules(GOBJECT REQUIRED gobject-2.0)
pkg_check_modules(GDK_PIXBUF REQUIRED gdk-pixbuf-2.0)
pkg_check_modules(GTK REQUIRED gtk+-3.0)
pkg_check_modules(GMODULE REQUIRED gmodule-2.0)

include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/../S1U/include)
include_directories(${DRM_INCLUDE_DIRS})
include_directories(${GBM_INCLUDE_DIRS})
include_directories(${EGL_INCLUDE_DIRS})
include_directories(${GLES2_INCLUDE_DIRS})
include_directories(${INPUT_INCLUDE_DIRS})
include_directories(${UDEV_INCLUDE_DIRS})
include_directories(${CAIRO_INCLUDE_DIRS})
include_directories(${PANGO_INCLUDE_DIRS})
include_directories(${FREETYPE_INCLUDE_DIRS})
include_directories(${HARFBUZZ_INCLUDE_DIRS})
include_directories(${PIXMAN_INCLUDE_DIRS})
include_directories(${LIBRSVG_INCLUDE_DIRS})
include_directories(${JSON_INCLUDE_DIRS})
include_directories(${GLIB_INCLUDE_DIRS})
include_directories(${GIO_INCLUDE_DIRS})
include_directories(${GOBJECT_INCLUDE_DIRS})
include_directories(${GDK_PIXBUF_INCLUDE_DIRS})
include_directories(${GTK_INCLUDE_DIRS})
include_directories(${GMODULE_INCLUDE_DIRS})
include_directories(${Vulkan_INCLUDE_DIRS})

link_directories(${DRM_LIBRARY_DIRS})
link_directories(${GBM_LIBRARY_DIRS})
link_directories(${EGL_LIBRARY_DIRS})
link_directories(${GLES2_LIBRARY_DIRS})
link_directories(${INPUT_LIBRARY_DIRS})
link_directories(${UDEV_LIBRARY_DIRS})
link_directories(${CAIRO_LIBRARY_DIRS})
link_directories(${PANGO_LIBRARY_DIRS})
link_directories(${FREETYPE_LIBRARY_DIRS})
link_directories(${HARFBUZZ_LIBRARY_DIRS})
link_directories(${PIXMAN_LIBRARY_DIRS})
link_directories(${LIBRSVG_LIBRARY_DIRS})
link_directories(${JSON_LIBRARY_DIRS})
link_directories(${GLIB_LIBRARY_DIRS})
link_directories(${GIO_LIBRARY_DIRS})
link_directories(${GOBJECT_LIBRARY_DIRS})
link_directories(${GDK_PIXBUF_LIBRARY_DIRS})
link_directories(${GTK_LIBRARY_DIRS})
link_directories(${GMODULE_LIBRARY_DIRS})

add_subdirectory(src)
add_subdirectory(examples)
add_subdirectory(plugins)
add_subdirectory(themes)
add_subdirectory(config)
add_subdirectory(scripts)
add_subdirectory(docs)
